fixed tablet media setting game new page

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -314,6 +314,16 @@ ul {
     margin-left: auto;
     margin-right: auto;
   }
+  .xyz {
+    margin-bottom: 15px;
+  }
+  .frosty {
+    margin: auto;
+  }
+  .new_game {
+    margin-left: auto;
+    margin-right: auto;
+  }
   .section {
     margin-left: auto;
     margin-right: auto;
