resized about photos

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -47,6 +47,12 @@ label.control-label.text.optional {
   height: 325px;
 }
 
+.piece_cap {
+  width: 70px;
+  height: 70px;
+  opacity: 1;
+}
+
 .spacing {
   flex-shrink: 8;
 }
@@ -68,18 +74,23 @@ td {
   background: white;
 }
 
-.piece_cap {
-  width: 70px;
-  height: 70px;
-  opacity: 1;
-}
-
 @media (max-width: 1024px) and (min-width:700px) {
   .board { 
     display: flex; 
     order: 1; 
     margin-left: auto; 
     margin-right: auto;
+  }
+  .captured-pieces {
+    height: 100px;
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    flex-wrap: wrap;
+  }
+  img.selectable-piece {
+    width: 45px;
+    height: 45px;
   }
   .leftside {
     display: flex; 
@@ -93,13 +104,6 @@ td {
   .piece_cap {
     width: 45px;
     height: 45px;
-  }
-  .captured-pieces {
-    height: 100px;
-    width: 700px;
-    margin-left: auto;
-    margin-right: auto;
-    flex-wrap: wrap;
   }
   .rightside { 
     align-items: flex-end;
@@ -116,10 +120,6 @@ td {
   td {
     width: 50px;
     height: 50px;
-  }
-  img {
-    width: 45px;
-    height: 45px;
   }
 }
 
