--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -11,7 +11,7 @@
 
     <div class="row feature">
       <div class="col-12 col-sm">
-        <%= image_tag 'mike.png', class: 'img-fluid about-image' %>
+        <%= image_tag 'miked.png', class: 'img-fluid about-image' %>
         <br />
         <p class="about-names">Mike Dunnett-Stone</p>
         <p>
@@ -53,7 +53,7 @@
       </div>
 
       <div class="col-12 col-sm">
-        <%= image_tag 'TScheitle1.jpg', class: 'img-fluid about-image' %>
+        <%= image_tag 'Tristen.jpg', class: 'img-fluid about-image' %>
         <br />
         <p class="about-names">Tristen Scheitle</p>
         <p>
@@ -71,7 +71,7 @@
       </div>
 
       <div class="col-12 col-sm">
-        <%= image_tag 'monica.jpg', class: 'img-fluid about-image' %>
+        <%= image_tag 'monicaS.jpg', class: 'img-fluid about-image' %>
         <br />
         <p class="about-names">Monica Sirathanarun</p>
         <p>
