--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -107,6 +107,12 @@
   box-shadow: 0px 1px 3px #2a2a2a;
 }
 
+.btn-secondary {
+  display: block;
+  margin: 0 auto;
+  
+}
+
 .btn-warning {
   color: white;
   background-color: #000000;
@@ -340,7 +346,6 @@ ul {
     margin-right: auto;
     margin-top: 20px;
     margin-bottom: 10px;
-
   }
   .btn-warning {
     margin: 15px auto;
@@ -352,6 +357,10 @@ ul {
   }
   .game-count {
     font-size: 20px;
+  }
+  img.about-image {
+    height: 200px;
+    width: 150px;
   }
   .indexgame {
     width: 325px;
