--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -11,7 +11,7 @@
           </div>
           <br />
           <div class="form-actions">
-            <%= f.button :submit, "Send me reset password instructions", class: 'btn btn-black' %>
+            <%= f.button :submit, "Send me reset instructions", class: 'btn btn-black' %>
           </div>
         <% end %>
         <br />
