--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -369,13 +369,17 @@ ul {
   input.player-button {
     margin: 0px 65px;
   }
+  .member-since {
+    font-size: 20px;
+  }
   .navbar-inverse .navbar-brand {
     font-size: 40px;
     line-height: .7em;
     margin-top: 20px;
   }
-  .member-since {
-    font-size: 20px;
+  .new_game {
+    margin-left: auto;
+    margin-right: auto;
   }
   .offset-3 {
     margin-left: auto;
