--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -17,18 +17,21 @@
       </div>
 
       <div class="booyah-box move-history">
+        <p class="move-title"> Moves </p>
+        <u class="col-4 text-right player-title"> White </u>
+        <u class="col-4 text-left player-title"> Black </u>
         <div class="row">
             <% @game.moves.each_with_index do |move| %>
               <% if move.present? && move.piece_user_id == @game.white_player_user_id %>
                 <div class="col-4 text-right">
-                  <p> <%= "#{move.notation(move.piece_type, move.x_coord, move.y_coord)}" %> </p>
+                  <p class="notation"> <%= "#{move.notation(move.piece_type, move.x_coord, move.y_coord)}" %> </p>
                 </div>
               <% else %>
                 <div class="col-4 text-center">
-                  <p>/</p>
+                  <p class="notation">/</p>
                 </div>
                 <div class="col-4 text-left">
-                  <p> <%= "#{move.notation(move.piece_type, move.x_coord, move.y_coord)}" %> </p>
+                  <p class="notation"> <%= "#{move.notation(move.piece_type, move.x_coord, move.y_coord)}" %> </p>
                 </div>
               <% end %>
             <% end %>
