added scroll to move box

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -51,7 +51,8 @@ label.control-label.text.optional {
 
 .move-title {
   text-align: center;
-  text-decoration: underline;
+  font-size: 18px;
+  font-weight: 600;
   margin-top: -15px;
   margin-bottom: -5px;
 }
@@ -67,7 +68,8 @@ label.control-label.text.optional {
 }
 
 .player-title {
-  margin: -10px 25px;
+  margin: -10px 22px;
+  font-style: italic;
 }
 
 .spacing {
