finalized styling before launch

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -111,6 +111,10 @@ td {
     width: 45px;
     height: 45px;
   }
+  input.forfeit.btn.btn-danger.btn-lg {
+    margin: -300px -200px;
+    position: absolute;
+  }
   .leftside {
     display: flex; 
     order: 2;
