--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -49,9 +49,9 @@
             <div class="indexgame">
               <h5 class="text-center"><%= "Game #{game.id}" %></h5> 
               <% if current_user.id == game.white_player_user_id %>
-                  <h6 class="text-center"><%= "Opponent: #{game.black_player.email}" %></h6>
+                  <h6 class="text-center"><%= "Opponent: #{game.black_player.username}" %></h6>
                 <% else %>
-                  <h6 class="text-center"><%= "Opponent: #{game.white_player.email}" %></h6>
+                  <h6 class="text-center"><%= "Opponent: #{game.white_player.username}" %></h6>
                 <% end %>
 
             <div class="row turn">
@@ -87,7 +87,7 @@
               <% else %>
                 <% if game.white_player_user_id.present? && game.black_player_user_id.present? %>
                    <h5 class="text-center"><%= "Game #{game.id}" %></h5>
-                  <h5>Stalemate between <%= game.white_player.email %> and <%= game.black_player.email %></h5>
+                  <h5>Stalemate between <%= game.white_player.username %> and <%= game.black_player.username %></h5>
                 <% end %>
               <% end %>
             </div>
