--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -4,7 +4,7 @@
     <br />
     <h1 class="text-center" id='about-header'>About Chess Space</h1>
     <br />
-    <p class="col-8 offset-2 text-center">
+    <p class="about-intro text-center">
       Chess Space is a fully functional chess application created by Team Awesome! for <a target="_blank" href="http://www.thefirehoseproject.com/">The Firehose Project's</a> full-stack development curriculum by these Awesome! developers:
     </p>
     <br />
