--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,5 +1,10 @@
 @import "bootstrap";
 
+.about-intro {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
 
 .about-links {
   display: block;
